# podcast-dl

./: .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml
.claude/: settings.local.json
src/podcast_dl/: __main__.py  cli.py
src/podcast_dl/commands/: download.py  run.py  transcribe.py
src/podcast_dl/core/: downloader.py  rss.py  transcriber.py
src/podcast_dl/utils/: console.py  paths.py
